# econ-project

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml  rproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/cleanup/: README.md  docker-prune-old.ps1
.github/workflows/: ci.yml  docker-cleanup-selfhosted.yml  notion-ocr-one.yml  notion-ocr-recent.yml  paperpile-to-notion-pdfs.yml  paperpile-to-notion.yml
R/: wage_analysis.R
notebooks/python/: environment_setup.ipynb
notebooks/r/: mincer_wage_analysis.ipynb
scripts/: drive-ocr-notion.js  notion-sync-db.js  notion-sync-pdfs.js  ocr-upload-notion.js  package-lock.json  package.json  trigger-workflow.js
scripts/utils/: parse-bibliography.js
src/: __init__.py  econ_analysis.py
tests/: __init__.py  test_econ_analysis.py
tex/paper/: econsocart.cfg  econsocart.cls  ecta_template.tex  main.tex  refs.bib
tex/slides/: main.nav  main.tex  talk.tex
