# pyproject.toml
[tool.poetry]
name = "econ-project"
version = "0.1.0"
description = "Econometrics research stack"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
mypy = "^1.10"
ruff = "^0.5"
pre-commit = "^3.7"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = ["E203","E266","E501"]
extend-select = ["I","B","C4","SIM","TID","UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
pretty = true
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
